src/App.scss
@import "bootstrap/scss/functions"; // Required for maps, math, etc.
@import "bootstrap/scss/variables"; // Import variables and use them directly

.top-info{
  width: 100%;
  height: 70vh;
  background-image: url('./assets/black-trans.jpg');
  background-size: cover; /* Covers the entire div */
  background-position: center; /* Centers the image */
  background-repeat: no-repeat; /* Prevents repetition */
  position: relative;

  .container{
    position: relative;
    z-index: 2;
  }
}
.overlay {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.38); /* semi-transparent dark overlay */
  z-index: 1;
}
.profile-man{
  width: 100%;
  height: 95%;
  background-image: url('./assets/confident-man.png');
  background-size: contain; /* Covers the entire div */
  background-position: center; /* Centers the image */
  background-repeat: no-repeat; /* Prevents repetition */
  position: absolute;
  top: 4%;
  right: -30%;
}

.line{
  width: 95%;
  height: 4px;
  background-color: #c40d1f;
  border-radius: 4px;
}

.validation-fs.invalid-feedback,
.validation-fs.valid-feedback
{
  font-size: 0.680em;
}

.connnect-section{
  max-height: 36px;
}

.navbar {
  transition: box-shadow 0.3s, background-color 0.3s, top 0.3s, opacity 0.3s;
  opacity: 1;
  top: 0;
  height: 72px;

  &.navbar-scrolled {
  box-shadow: 0 4px 24px rgba(44, 62, 80, 0.10);
  background-color: #181818; // or any color you want
  opacity: 1;
  top: 0;
}

  .navbar-toggler{
    &:focus{
      box-shadow: none;
    }
    &:hover{
      .navbar-toggler-icon{
        opacity: 0.8;
     }
    } 
}
}
.offcanvas {
  &.offcanvas-end{
    .offcanvas-header .btn-close {
      &:focus{
      box-shadow: none;
    }
    }
  }
}

.service-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
  gap: 2rem; // adjust as needed
}

.home-service-card{
  &.card{
    flex: 1 1 auto;
    max-height: 340px;
    transition: transform 0.3s cubic-bezier(.4,2,.6,1), box-shadow 0.3s;
    will-change: transform, box-shadow;

     &:hover {
    transform: translateY(-8px) scale(1.03);
    box-shadow: 0 8px 32px rgba(44, 62, 80, 0.15), 0 2px 8px rgba(0,0,0,0.10);
    z-index: 2;
  }

  &.card-rc{
   
      &:hover {
        box-shadow: none;
        transform: none;
        .title-rc{
          color: #c40d1f;
        }
      }
  }
  }
  
}

